--- a/App/Pages/Products/Ram.cshtml
+++ b/App/Pages/Products/Ram.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/products/ram/{productId?}/{pageNumber?}"
 @using Domain.EntityModels.Additional.Common
 @model App.Pages.Products.RamModel
 @{
