--- a/App/Pages/Products/DesktopComputer.cshtml
+++ b/App/Pages/Products/DesktopComputer.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/products/desktopcomputer/{productId?}/{pageNumber?}"
 @using Domain.EntityModels.Additional.Common
 @model App.Pages.Products.DesktopComputerModel
 @{
