--- a/App/Pages/Products/DiskDrive.cshtml
+++ b/App/Pages/Products/DiskDrive.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/products/diskdrive/{productId?}/{pageNumber?}"
 @using Domain.EntityModels.Additional.Common
 @model App.Pages.Products.DiskDriveModel
 @{
