--- a/App/Pages/Products/Laptop.cshtml
+++ b/App/Pages/Products/Laptop.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/products/laptop/{productId?}/{pageNumber?}"
 @using Domain.EntityModels.Additional.Common
 @model App.Pages.Products.LaptopModel
 @{
