--- a/App/Pages/Products/MotherBoard.cshtml
+++ b/App/Pages/Products/MotherBoard.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/products/motherboard/{productId?}/{pageNumber?}"
 @using Domain.EntityModels.Additional.Common
 @model App.Pages.Products.MotherBoardModel
 @{
