--- a/App/Pages/Products/PowerSupply.cshtml
+++ b/App/Pages/Products/PowerSupply.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/products/powersupply/{productId?}/{pageNumber?}"
 @using Domain.EntityModels.Additional.Common
 @model App.Pages.Products.PowerSupplyModel
 @{
