--- a/App/Pages/Products/Processor.cshtml
+++ b/App/Pages/Products/Processor.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/products/processor/{productId?}/{pageNumber?}"
 @using Domain.EntityModels.Additional.Common
 @model App.Pages.Products.ProcessorModel
 @{
