--- a/App/Pages/Products/Smartphone.cshtml
+++ b/App/Pages/Products/Smartphone.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/products/smartphone/{productId?}/{pageNumber?}"
 @using Domain.EntityModels.Additional.Common
 @model App.Pages.Products.SmartphoneModel
 @{
