--- a/App/Pages/Products/Televisor.cshtml
+++ b/App/Pages/Products/Televisor.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/products/televisor/{productId?}/{pageNumber?}"
 @using Domain.EntityModels.Additional.Common
 @model App.Pages.Products.TelevisorModel
 @{
