--- a/App/Pages/Products/DiskDrive.cshtml
+++ b/App/Pages/Products/DiskDrive.cshtml
@@ -28,6 +28,7 @@
                      "ImagesArea",
                      new
                      {
+                         requestPath = "/products/diskdrive",
                          bonusProductImagesId = Model.BonusProductImagesId,
                          productId = Model.ProductId
                      })
