--- a/App/Pages/Shared/_Layout.cshtml
+++ b/App/Pages/Shared/_Layout.cshtml
@@ -77,41 +77,41 @@
                 <ul class="navbar-nav">
                     <!-- Części komputerowe -->
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#">Części komputerowe</a>
+                        <span class="nav-link dropdown-toggle">Części komputerowe</span>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Płyty główne</a></li>
-                            <li><a class="dropdown-item" href="#">Pamięci RAM</a></li>
-                            <li><a class="dropdown-item" href="#">Dyski</a></li>
-                            <li><a class="dropdown-item" href="#">Karty graficzne</a></li>
-                            <li><a class="dropdown-item" href="#">Procesory</a></li>
-                            <li><a class="dropdown-item" href="#">Zasilacze</a></li>
-                            <li><a class="dropdown-item" href="#">Obudowy</a></li>
+                            <li><a class="dropdown-item" href="/products/list/motherboard">Płyty główne</a></li>
+                            <li><a class="dropdown-item" href="/products/list/ram">Pamięci RAM</a></li>
+                            <li><a class="dropdown-item" href="/products/list/diskdrive">Dyski</a></li>
+                            <li><a class="dropdown-item" href="/products/list/graphiccard">Karty graficzne</a></li>
+                            <li><a class="dropdown-item" href="/products/list/processor">Procesory</a></li>
+                            <li><a class="dropdown-item" href="/products/list/powersupply">Zasilacze</a></li>
+                            <li><a class="dropdown-item" href="/products/list/case">Obudowy</a></li>
                         </ul>
                     </li>
                     <!-- Komputery -->
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#">Komputery</a>
+                        <span class="nav-link dropdown-toggle">Komputery</span>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Komputery stacjonarne</a></li>
-                            <li><a class="dropdown-item" href="#">Laptopy</a></li>
+                            <li><a class="dropdown-item" href="/products/list/desktopcomputer">Komputery stacjonarne</a></li>
+                            <li><a class="dropdown-item" href="/products/list/laptop">Laptopy</a></li>
                         </ul>
                     </li>
                     <!-- Urządzenia peryferyjne -->
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#">Urządzenia peryferyjne</a>
+                        <span class="nav-link dropdown-toggle">Urządzenia peryferyjne</span>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Monitory</a></li>
-                            <li><a class="dropdown-item" href="#">Myszki</a></li>
-                            <li><a class="dropdown-item" href="#">Klawiatury</a></li>
-                            <li><a class="dropdown-item" href="#">Drukarki</a></li>
+                            <li><a class="dropdown-item" href="/products/list/monitor">Monitory</a></li>
+                            <li><a class="dropdown-item" href="/products/list/mouse">Myszki</a></li>
+                            <li><a class="dropdown-item" href="/products/list/keyboard">Klawiatury</a></li>
+                            <li><a class="dropdown-item" href="/products/list/printer">Drukarki</a></li>
                         </ul>
                     </li>
                     <!-- Inne urządzenia -->
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#">Inne urządzenia</a>
+                        <span class="nav-link dropdown-toggle">Inne urządzenia</span>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Smartfony</a></li>
-                            <li><a class="dropdown-item" href="#">Telewizory</a></li>
+                            <li><a class="dropdown-item" href="/products/list/smartphone">Smartfony</a></li>
+                            <li><a class="dropdown-item" href="/products/list/televisor">Telewizory</a></li>
                         </ul>
                     </li>
                 </ul>
