--- a/App/Pages/register.cshtml
+++ b/App/Pages/register.cshtml
@@ -95,7 +95,7 @@
                 <label for="lastNameInput" class="loginCaption">Nazwisko</label> <br />
             </div>
             <div class="inputUnit">
-                <input asp-for="phoneNumber" type="number" id="phoneNumberInput" class="loginInput" placeholder="" required />
+                <input asp-for="phoneNumber" type="text" id="phoneNumberInput" class="loginInput" placeholder="" required />
                 <label for="phoneNumberInput" class="loginCaption">Numer telefonu</label> <br />
             </div>
                 <h3>Ulica i lokal</h3>
