--- a/App/wwwroot/css/site.css
+++ b/App/wwwroot/css/site.css
@@ -62,6 +62,7 @@ header {
 }
 
 .nav-link {
+    cursor: pointer;
     margin-left: 0px;
     margin-right: 25px;
     color: white;
@@ -81,6 +82,13 @@ header {
     border-bottom: 1px solid Silver;
     padding: 6px;
 }
+
+dropdown-item:visited {
+    color: white;
+    border-bottom: 1px solid Silver;
+    padding: 6px;
+}
+
 .dropdown:hover .dropdown-menu {
     display: block; /* Wyœwietlanie menu po najechaniu */
 }
@@ -95,4 +103,29 @@ header {
 #searchArea
 {
     margin-top: 24px;
+}
+.proudctListElement {
+    padding: 10px;
+    border: 1px solid silver;
+    border-radius: 20px;
+}
+
+.proudctTileElement {
+    padding: 10px;
+    border: 1px solid silver;
+    border-radius: 20px;
+    width: 300px;
+}
+
+
+/* Hide the spin buttons in WebKit browsers */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Hide spin buttons in Firefox */
+input[type="number"] {
+    -moz-appearance: textfield;
 }
