--- a/App/wwwroot/fonts/fontello-82b3d7a7/css/fontello-codes.css
+++ b/App/wwwroot/fonts/fontello-82b3d7a7/css/fontello-codes.css
@@ -2,5 +2,7 @@
 .icon-basket:before { content: '\e800'; } /* '' */
 .icon-star:before { content: '\e801'; } /* '' */
 .icon-star-empty:before { content: '\e802'; } /* '' */
+.icon-cancel-1:before { content: '\e803'; } /* '' */
+.icon-cancel:before { content: '\e806'; } /* '' */
 .icon-star-half-alt:before { content: '\f123'; } /* '' */
 .icon-user-circle-o:before { content: '\f2be'; } /* '' */
