--- a/App/wwwroot/fonts/fontello-82b3d7a7/css/fontello.css
+++ b/App/wwwroot/fonts/fontello-82b3d7a7/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?28264171');
-  src: url('../font/fontello.eot?28264171#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?28264171') format('woff2'),
-       url('../font/fontello.woff?28264171') format('woff'),
-       url('../font/fontello.ttf?28264171') format('truetype'),
-       url('../font/fontello.svg?28264171#fontello') format('svg');
+  src: url('../font/fontello.eot?48918032');
+  src: url('../font/fontello.eot?48918032#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?48918032') format('woff2'),
+       url('../font/fontello.woff?48918032') format('woff'),
+       url('../font/fontello.ttf?48918032') format('truetype'),
+       url('../font/fontello.svg?48918032#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?28264171#fontello') format('svg');
+    src: url('../font/fontello.svg?48918032#fontello') format('svg');
   }
 }
 */
@@ -57,5 +57,7 @@
 .icon-basket:before { content: '\e800'; } /* '' */
 .icon-star:before { content: '\e801'; } /* '' */
 .icon-star-empty:before { content: '\e802'; } /* '' */
+.icon-cancel-1:before { content: '\e803'; } /* '' */
+.icon-cancel:before { content: '\e806'; } /* '' */
 .icon-star-half-alt:before { content: '\f123'; } /* '' */
 .icon-user-circle-o:before { content: '\f2be'; } /* '' */
