--- a/App/Pages/EditPersonalInformation.cshtml
+++ b/App/Pages/EditPersonalInformation.cshtml
@@ -11,11 +11,11 @@
         </div>
         <div class="inputUnit">
             <input asp-for="lastName" type="text" class="loginInput" placeholder="" value="@Model.lastName"/>
-            <label class="loginCaption">Imie</label><br />
+            <label class="loginCaption">Nazwisko</label><br />
         </div>
         <div class="inputUnit">
             <input asp-for="phoneNumber" type="number" id="phoneNumberInput" class="loginInput" placeholder="" value="@Model.phoneNumber" />
-            <label class="loginCaption">Imie</label><br />
+            <label class="loginCaption">Numer telefonu</label><br />
         </div>
         <input type="submit" value="Zatwierdź" class="loginButton" />
     </div>
