--- a/App/Pages/RegisterCompleted.cshtml
+++ b/App/Pages/RegisterCompleted.cshtml
@@ -6,7 +6,7 @@
     Rejestracja przebiegła pomyślnie
 </div>
 <script>
-    let redircation = "@Url.Page("/UserSettingsPanel")"
+    let redircation = "@Url.Page("/Index")"
     setTimeout(function () {
         window.location.href = redircation; 
     }, 5000); 
