--- a/App/Pages/Shared/_Layout.cshtml
+++ b/App/Pages/Shared/_Layout.cshtml
@@ -68,9 +68,9 @@
                 }
 
                 </div>
-                <a
+
                 <div id="basket" class="col-2">
-                    <a asp-page="/Basket">
+                    <a href="/Basket" style="color: white">
                         <span>
                             <i class="demo-icon icon-basket" style="font-size:30px;"></i>
                             <span">Koszyk</span>
@@ -84,7 +84,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <!-- Części komputerowe -->
-                    <li class="nav-item dropdown">
+                    <li class="dropdown">
                         <span class="nav-link dropdown-toggle">Części komputerowe</span>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="/products/list/motherboard">Płyty główne</a></li>
@@ -97,7 +97,7 @@
                         </ul>
                     </li>
                     <!-- Komputery -->
-                    <li class="nav-item dropdown">
+                    <li class="dropdown">
                         <span class="nav-link dropdown-toggle">Komputery</span>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="/products/list/desktopcomputer">Komputery stacjonarne</a></li>
@@ -105,17 +105,16 @@
                         </ul>
                     </li>
                     <!-- Urządzenia peryferyjne -->
-                    <li class="nav-item dropdown">
+                    <li class="dropdown">
                         <span class="nav-link dropdown-toggle">Urządzenia peryferyjne</span>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/products/list/monitor">Monitory</a></li>
                             <li><a class="dropdown-item" href="/products/list/mouse">Myszki</a></li>
                             <li><a class="dropdown-item" href="/products/list/keyboard">Klawiatury</a></li>
                             <li><a class="dropdown-item" href="/products/list/printer">Drukarki</a></li>
                         </ul>
                     </li>
                     <!-- Inne urządzenia -->
-                    <li class="nav-item dropdown">
+                    <li class="dropdown">
                         <span class="nav-link dropdown-toggle">Inne urządzenia</span>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="/products/list/smartphone">Smartfony</a></li>
