--- a/App/Pages/OrderCompleted.cshtml
+++ b/App/Pages/OrderCompleted.cshtml
@@ -7,6 +7,6 @@
     Dziękujemy za zrobienie zakupów w naszym sklepie. Twoje zamówienie zostało złożone i oczekuje na realizację.
     Gdy tylko zamówienie zostanie opłacone przystąpimy do jego kompletowania. Dane do przelewu:<br/>
     <br/>
-    Tytuł przelewu: za zamówienie numer: @Model.OrderNumber <br />
+    Tytuł przelewu: Za zamówienie numer: @Model.OrderNumber <br />
     Numer Konta: @Model.AcountNumber <br />
 </div>
