--- a/App/Pages/Orders.cshtml
+++ b/App/Pages/Orders.cshtml
@@ -4,12 +4,12 @@
 }
 <div class="logOrRegForm">
     <h2 style="text-align: center" class="mb-4">Zamówienia</h2>
-    <form method="get">
+    <form method="get" action="/RealisedOrders">
         <button type="submit" class="loginButton">
             Pokaż zrealizowane zamówienia
         </button>
     </form>
-    <form method="get">
+    <form method="get" action="OrdersInProgress">
         <button type="submit" class="loginButton">
             Pokaż zamówienia w trakcie realizacji
         </button>
