--- a/App/Pages/Products/DesktopComputer.cshtml
+++ b/App/Pages/Products/DesktopComputer.cshtml
@@ -252,10 +252,10 @@
         </tr>
         <tr>
             <td>
-                Moc zasilacza Watów
+                Moc zasilacza 
             </td>
             <td>
-                @Model.PowerSupply
+                @Model.PowerSupply Watów
             </td>
         </tr>
         <tr>
