--- a/App/Pages/AdminPanel/Index.cshtml
+++ b/App/Pages/AdminPanel/Index.cshtml
@@ -5,7 +5,15 @@
 <div class="logOrRegForm">
     <div id="loginFormContent">
         <h2>Numer konta bankowego</h2>
-        @Model.AcountNumber <button>Edytuj</button>
+        @Model.AcountNumber <button class="narrowButton" onclick="showAcountNumberForm()">Edytuj</button>
+        <dialog id="acountNumberDialog">
+            <form method="post">
+                <label for="AcountNumber">Numer konta:</label><br/>
+                <input asp-for="AcountNumber"/>
+                <button type="submit" class="narrowButton">Zatwierdź</button>
+                <button type="button" onclick="hideAcountNumberForm()" class="narrowButton">Wróc</button>
+            </form>
+        </dialog>
         <h2>Dodawanie produktów</h2>
         <form method="get" action="@Url.Page("/AdminPanel/AddOrEditCase")">
             <input type="hidden" name="handler" value="Add"/>
@@ -69,12 +77,19 @@
         </form>
         <h2>Zamówienia</h2>
         <form method="get" action="@Url.Page("/AdminPanel/RealisedOrders")">
-            <input type="hidden" name="handler" value="Add" />
             <button type="submit" class="loginButton">Pokaż zrealizowane zamówienia</button>
         </form>
-        <form method="get" action="@Url.Page("/AdminPanel/UnrealisedOrders")">
-            <input type="hidden" name="handler" value="Add" />
-            <button type="submit" class="loginButton">Pokaż nierzrealizowane zamówienia</button>
+        <form method="get" action="@Url.Page("/AdminPanel/OrdersInProgress")">
+            <button type="submit" class="loginButton">Pokaż zamówienia w trakcie realizacji</button>
         </form>
     </div>
 </div>
+<script>
+    const acountNumberDialog = document.getElementById("acountNumberDialog");
+    function showAcountNumberForm() { 
+        acountNumberDialog.showModal();
+    }
+    function hideAcountNumberForm() {
+        acountNumberDialog.close();
+    }
+</script>
